--- a/MyWeb/src/main/webapp/WEB-INF/web.xml
+++ b/MyWeb/src/main/webapp/WEB-INF/web.xml
@@ -16,12 +16,16 @@
 	</listener>
 
 	<!-- Processes application requests -->
+	<!-- 얘가 가장 먼저 등록되는 DispatcherServlet -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>
+				WEB-INF/spring/appServlet/servlet-context.xml
+				WEB-INF/spring/appServlet/email-config.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
